--- a/Rams_app/analysis_options.yaml
+++ b/Rams_app/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     unused_field: ignore
+    unused_element: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
