--- a/Rams_app/pubspec.yaml
+++ b/Rams_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^4.4.0
   cloud_firestore: ^6.1.2
   firebase_auth: ^6.1.4
+  firebase_storage: ^13.0.6
   flutter_dotenv: ^6.0.0
   image_picker: ^1.0.7
 
