--- a/Rams_app/analysis_options.yaml
+++ b/Rams_app/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     unused_field: ignore
     unused_element: ignore
+    unused_local_variable: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
