--- a/Rams_app/pubspec.yaml
+++ b/Rams_app/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.0
-
+  path_provider: ^2.1.2
+  pdf: ^3.10.7
+  permission_handler: ^11.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
